--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "bootstrap": "^4.6.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "gsap": "^3.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
