--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "gsap": "^3.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-animated-burgers": "^1.2.8",
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
