--- a/package.json
+++ b/package.json
@@ -8,26 +8,17 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "apollo-boost": "^0.4.9",
     "bootstrap": "^4.6.0",
-    "graphql": "^15.5.0",
-    "graphql-tag": "^2.11.0",
     "gsap": "^3.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-animated-burgers": "^1.2.8",
-    "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-scroll": "^1.8.1",
-    "styled-components": "^5.2.1",
-    "web-vitals": "^1.1.0"
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
