--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-scroll": "^1.8.1"
+    "react-scroll": "^1.8.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
